Test coverage for applying displayid to rise-storage v1 & v2 [stage-2]

--- a/test/integration/non-storage/messaging-legacy-player.html
+++ b/test/integration/non-storage/messaging-legacy-player.html
@@ -58,13 +58,13 @@
       }
     };
 
-    paramsStub = sinon.stub(RiseVision.Video, "setAdditionalParams", function (params, mode) {
+    paramsStub = sinon.stub(RiseVision.Video, "setAdditionalParams", function (params, mode, displayId) {
       ready = true;
 
       // restore the function
       paramsStub.restore();
       // call it again with the params
-      RiseVision.Video.setAdditionalParams(params, mode);
+      RiseVision.Video.setAdditionalParams(params, mode, displayId);
     });
 
     suiteSetup(function(done) {
