--- a/test/integration/non-storage/file.html
+++ b/test/integration/non-storage/file.html
@@ -57,7 +57,7 @@
       }
     };
 
-    paramsStub = sinon.stub(RiseVision.Video, "setAdditionalParams", function (names, values) {
+    paramsStub = sinon.stub(RiseVision.Video, "setAdditionalParams", function (names, values, displayId) {
       ready = true;
 
       // need to set the fake timer clock before any of the code within setAdditionalParams is executed
@@ -65,7 +65,7 @@
       // restore the function
       paramsStub.restore();
       // call it again with the params
-      RiseVision.Video.setAdditionalParams(names, values);
+      RiseVision.Video.setAdditionalParams(names, values, displayId);
     });
 
     suiteSetup(function(done) {
